make Git routine

--- a/web/ja/manual/topic/friends/eclipse/index.html
+++ b/web/ja/manual/topic/friends/eclipse/index.html
@@ -79,7 +79,8 @@
 	<p>
 		Eclipse上でGit操作ができます。
 	</p>
-	<div class="detailpage"><a href="./operation/egit.html">Eclipse上でのGit操作</a></div>
+	<div class="relatedpage"><a href="./operation/git/egitclone.html">Eclipseでgit clone</a></div>
+	<div class="relatedpage"><a href="./operation/git/egitroutine.html">Eclipseで日常Git操作</a></div>
 
 	<h2 id="environment">Eclipseの環境</h2>
 	<h3 id="workproj">ワークスペースとプロジェクト</h3>
