--- a/web/ja/tutorial/handson/section01.html
+++ b/web/ja/tutorial/handson/section01.html
@@ -104,6 +104,10 @@
 		【注意】もし社内でDBFluteハンズオン用の "gitリポジトリ" が用意されている場合は、そちらを利用してください。
 		<span class="frm">(用意されているかどうかわからない場合は、近くの人に聞いてみてください)</span>
 	</p>
+	<p>
+		もしGit操作がよくわからない方で、Eclipseを使っている方は、参考になるドキュメントがあります。
+	</p>
+	<div class="relatedpage"><a href="../../manual/topic/friends/eclipse/operation/git/egitclone.html">Eclipseでgit clone</a></div>
 	<h4 id="ideimport">IDE にて import</h4>
 	<p>
 		そして、EclipseやIntelliJなどで、プロジェクトとしてimport (open) しましょう。
