--- a/web/ja/tutorial/javatry/index.html
+++ b/web/ja/tutorial/javatry/index.html
@@ -141,8 +141,10 @@
        |-eclipse-dbflute
        |-workspace  <span class="comment">// 例えばここ</span>
 </code></pre>
-	<dl class="keymainlist">
-	</dl>
+	<p>
+		もしGit操作がよくわからない方で、Eclipseを使っている方は、参考になるドキュメントがあります。
+	</p>
+	<div class="relatedpage"><a href="../../manual/topic/friends/eclipse/operation/git/egitclone.html">Eclipseでgit clone</a></div>
 	<h3 id="importproject">3. Eclipse/IntelliJなどでimport</h3>
 	<p>
 		Eclipse や IntelliJ などの IDE にて、git cloneされた javatry を import しましょう。
