fix broken link

--- a/web/ja/manual/topic/friends/eclipse/operation/git/egitclone.html
+++ b/web/ja/manual/topic/friends/eclipse/operation/git/egitclone.html
@@ -29,7 +29,7 @@
 		コミットやプッシュなどの日常Git操作は別ページです。ここではgit cloneのみを紹介しています。
 	</p>
 	<div class="relatedpage"><a href="./egitroutine.html">Eclipseで日常git操作</a></div>
-	<div class="relatedpage"><a href="../index.html">Friends - Eclipse</a></div>
+	<div class="relatedpage"><a href="../../index.html">Friends - Eclipse</a></div>
 	${indexlist}
 
 	<h2 id="egit">組み込みのEGitプラグイン</h2>
