--- a/web/ja/manual/topic/friends/eclipse/operation/git/egitroutine.html
+++ b/web/ja/manual/topic/friends/eclipse/operation/git/egitroutine.html
@@ -29,7 +29,7 @@
 		すでに git clone されて、Eclipseに import されていることが前提です。
 	</p>
 	<div class="relatedpage"><a href="./egitclone.html">Eclipseでgit clone</a></div>
-	<div class="relatedpage"><a href="../index.html">Friends - Eclipse</a></div>
+	<div class="relatedpage"><a href="../../index.html">Friends - Eclipse</a></div>
 	${indexlist}
 
 	<h2 id="egit">組み込みのEGitプラグイン</h2>
