about password hint

--- a/web/ja/manual/topic/friends/eclipse/operation/git/egitclone.html
+++ b/web/ja/manual/topic/friends/eclipse/operation/git/egitclone.html
@@ -154,6 +154,12 @@
 	<p>
 		Finishすると clone されます。
 	</p>
+	<p>
+		Importも同時にやっている場合は、その時点で依存ライブラリのダウンロードなども実行される可能性があるので少々時間がかかるかもしれません。
+	</p>
+	<p>
+		Password Hintについてのダイアログが出てくる可能性がありますが、特に Password Hint が不要であれば(わからないのであれば) "No" で良いでしょう。
+	</p>
 	<h3 id="confirmclone">3-4. cloneされたことを確認</h3>
 	<p>
 		Git Repositories View に clone されたリポジトリが表示されていればOKです。
