about intellij live template

--- a/web/ja/tutorial/handson/section01.html
+++ b/web/ja/tutorial/handson/section01.html
@@ -233,21 +233,9 @@ PROJECT_ROOT
 	<p>
 		DBFluteハンズオンでは、IDE設定もエクササイズのひとつです。自分で別の環境を作るときには必要ですから、内容を把握しながら設定していきましょう。
 	</p>
-	<h3 id="workprojdiff">.ideaディレクトリでの設定共有は？ <span class="frm">(if IntelliJ)</span></h3>
-	<p>
-		(IntelliJの方は) DBFluteハンズオンで用意されている .ideaディレクトリを把握しておいてください。
-	</p>
-	<dl class="valuemainlist">
-		<dt>読み物エクササイズ</dt><dd><a href="../../manual/topic/friends/intellij/index.html">Friends - IntelliJ</a></dd>
-	</dl>
-	<p>
-		.idea ディレクトリの中にワークスペースの設定とプロジェクトの設定が混在しています。
-		ハンズオンでは、DBFluteを使う際に設定されておいたほうが良い IntelliJ のオプションがすでにコミットされていて有効になっています。
-		<span class="frm">(なので設定エクササイズはありませんが、知っておくことは大事です)</span>
-	</p>
 	<h3 id="recomwork">ハンズオンのワークスペース設定 <span class="frm">(if Eclipse)</span></h3>
 	<p>
-		(Eclipseの方は) 以下のページのおすすめワークスペース設定を反映していってください。<br>
+		(Eclipseの方は) 以下のページのおすすめワークスペース設定を反映していってください。
 	</p>
 	<dl class="valuemainlist">
 		<dt>設定エクササイズ</dt><dd><a href="../../manual/topic/friends/eclipse/environment/recomwork.html">Eclipseのおすすめワークスペース設定</a></dd>
@@ -256,6 +244,10 @@ PROJECT_ROOT
 		少々手間がありますが、Eclipseの環境構築の勉強と思いながら設定してましょう。
 		特にDBFluteの補完テンプレートとパッケージの見た目表現は、DBFluteを使うときの重要な設定となります。
 	</p>
+	<p>
+		これを設定することで、DBFluteの補完テンプレートが入ります。後の実装で使っていきましょう。
+	</p>
+	<div class="relatedpage"><a href="../eclipse/dfclipsecomp.html">DBFluteのEclipseコード補完</a></div>
 	<h3 id="recomwork">ハンズオンのプロジェクト設定 <span class="frm">(if Eclipse)</span></h3>
 	<p>
 		(Eclipseの方は) 以下のページのおすすめプロジェクト設定を反映していってください。<br>
@@ -265,6 +257,25 @@ PROJECT_ROOT
 	</dl>
 	<p>
 		DBFluteハンズオンをgitにコミットして共有される方は、レビューワーの環境でも同じ挙動になるようにするために、.settingsディレクトリも忘れずにコミットしましょう
+	</p>
+	<h3 id="intellijlive">IntelliJでも補完テンプレート <span class="frm">(if IntelliJ)</span></h3>
+	<p>
+		IntelliJでもDBFluteの補完テンプレートが用意されています。これを設定しておいてください。
+	</p>
+	<dl class="valuemainlist">
+		<dt>設定エクササイズ</dt><dd><a href="../../manual/topic/friends/intellij/index.html#dbflutelivetemplate">IntelliJ - DBFlute な Live Template</a></dd>
+	</dl>
+	<h3 id="ideashared">.ideaディレクトリでの設定共有は？ <span class="frm">(if IntelliJ)</span></h3>
+	<p>
+		(IntelliJの方は) DBFluteハンズオンで用意されている .ideaディレクトリを把握しておいてください。
+	</p>
+	<dl class="valuemainlist">
+		<dt>読み物エクササイズ</dt><dd><a href="../../manual/topic/friends/intellij/index.html">Friends - IntelliJ</a></dd>
+	</dl>
+	<p>
+		.idea ディレクトリの中にワークスペースの設定とプロジェクトの設定が混在しています。
+		ハンズオンでは、DBFluteを使う際に設定されておいたほうが良い IntelliJ のオプションがすでにコミットされていて有効になっています。
+		<span class="frm">(なので読むだけですが、知っておくことは大事です)</span>
 	</p>
 
 	<h2 id="dfsetup">DBFluteのセットアップ</h2>
