just fix: wrong link

--- a/web/ja/tutorial/eclipse/dfclipsecomp.html
+++ b/web/ja/tutorial/eclipse/dfclipsecomp.html
@@ -25,7 +25,7 @@
 
 <div id="content"><!-- __content-start__ -->
 	<h1>DBFluteのEclipseコード補完</h1>
-	<div class="relatedpage"><a href="../../lastaflute/tutorial/eclipse/laclipsecomp.html#setuptemplate">LastaFluteのEclipse補完テンプレート</a></div>
+	<div class="relatedpage"><a href="../../lastaflute/tutorial/eclipse/laclipsecomp.html">LastaFluteのEclipse補完テンプレート</a></div>
 	${indexlist}
 
 	<h2 id="howtocomp">どう打ち込めばいい？</h2>
