just fix: broken links

--- a/web/ja/tutorial/eclipse/dfclipsecomp.html
+++ b/web/ja/tutorial/eclipse/dfclipsecomp.html
@@ -54,8 +54,8 @@
 		<dt><em class="mark">_a</em></dt><dd>Java8, Lambda式の矢印 <em class="mark">-&gt;</em></dd>
 		<dt><em class="mark">_li</em> <span class="frm">(えるあい)</span></dt><dd><a href="#_lill">Java8, Lambda式の一行スタイル (Lambda + Inline)</a> ★★★</dd>
 		<dt><em class="mark">_ll</em> <span class="frm">(えるえる)</span></dt><dd><a href="#_lill">Java8, Lambda式の一行スタイル (Lambda + Linefeed)</a> ★★★</dd>
-		<dt><em class="mark">_bili</em></dt><dd><a href="#_bilili">Java8, 引数２つ(Bi)のLambda式の一行スタイル (Bi + Lambda + Inline)</a></dd>
-		<dt><em class="mark">_bill</em></dt><dd><a href="#_bilili">Java8, 引数２つ(Bi)のLambda式の改行スタイル (Bi + Lambda + Line)</a></dd>
+		<dt><em class="mark">_bili</em></dt><dd><a href="#_bilill">Java8, 引数２つ(Bi)のLambda式の一行スタイル (Bi + Lambda + Inline)</a></dd>
+		<dt><em class="mark">_bill</em></dt><dd><a href="#_bilill">Java8, 引数２つ(Bi)のLambda式の改行スタイル (Bi + Lambda + Line)</a></dd>
 		<dt><em class="mark">_kvli</em></dt><dd>Java8, MapのforEach()想定のkey-value引数のLambda式の一行スタイル</dd>
 		<dt><em class="mark">_kvll</em></dt><dd>Java8, MapのforEach()想定のkey-value引数のLambda式の改行スタイル</dd>
 		<dt><em class="mark">_foreach</em></dt><dd><a href="#_foreach">Java8, ListのforEach()メソッド補完</a> ★</dd>
