resolve Mac and Windows

--- a/web/ja/manual/topic/friends/eclipse/shortcut/codejustcut.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/codejustcut.html
@@ -35,11 +35,11 @@
 	<h2 id="look">見た目周り</h2>
 	<dl class="textlist">
 		<dt>コードフォーマット</dt>
-		<dd><em class="keyword">ctrl + shift + F</em> <span class="frm">(ctrl -&gt; command in Mac)</span></dd>
+		<dd><em class="keyword">command(ctrl) + shift + F</em></dd>
 		<dd>
-			ソースコードのフォーマットを行う。保存ショートカット ctrl + S
+			ソースコードのフォーマットを行う。保存ショートカット command + S
 			を押す直前にこのショートカットを押す習慣があると良い。
-			ただ、保存時(ctrl + S)に自動的にフォーマットされるようにすることも可能なので、覚える必要ないかもしれない。
+			ただ、保存時(command + S)に自動的にフォーマットされるようにすることも可能なので、覚える必要ないかもしれない。
 			<div class="relatedpage"><a href="../../friends/eclipse/index.html">Friends - Eclipse</a></div>
 		</dd>
 		<dd>
@@ -49,21 +49,19 @@
 		</dd>
 		<dd>
 			DBFlute の Example は全てフォーマット定義がされていて、チェックアウトした状態でそのまま利用できるようになっている。
-			横幅を 120 文字まで増やし、コメント内のフォーマットを OFF にしている。フォーマット定義は、dbflute-basic-example や
-			dbflute-spring-example などで後でインポート可能な形式の XML
-			として保存されているので、独自のフォーマット定義が何も思い付かない場合は、とりあえずこれを利用しても良いでしょう。
+			横幅を 140 文字まで増やし、コメント内のフォーマットを OFF にしている。
 		</dd>
 	</dl>
 
 	<h2 id="code">コード周り</h2>
 	<dl class="textlist">
 		<dt>インポートの調整</dt>
-		<dd><em class="keyword">ctrl + shift + O</em> <span class="frm">("おー")</span> <span class="frm">(ctrl -&gt; command in Mac)</span></dd>
+		<dd><em class="keyword">command(ctrl) + shift + O</em> <span class="frm">("おー")</span> <span class="frm">(ctrl -&gt; command in Mac)</span></dd>
 		<dd>
 			import 文の整理整頓を行ってくれる。
 		</dd>
 		<dt>リファクタリング</dt>
-		<dd><em class="keyword">alt + shift + R</em> <span class="frm">(alt + command + R in Mac)</span></dd>
+		<dd><em class="keyword">alt + command + R</em> <span class="frm">(Windowsだと alt + shift + R)</span></dd>
 		<dd>
 			クラス名やメソッド名などのリファクタリング。
 		</dd>
@@ -72,7 +70,7 @@
 	<h2 id="comment">コメント周り</h2>
 	<dl class="textlist">
 		<dt>コメントアウト</dt>
-		<dd><em class="keyword">ctrl + /</em> <span class="frm">(スラッシュ)</span> <span class="frm">(ctrl -&gt; command in Mac)</span></dd>
+		<dd><em class="keyword">command(ctrl) + /</em> <span class="frm">(スラッシュ)</span></dd>
 		<dd>
 			現在カーソルのある行、もしくは、選択した行が "//" でコメントアウトされる。
 			その行が既にコメントアウトされている行であれば、逆にコメントが外れる。
