--- a/web/ja/manual/topic/friends/eclipse/shortcut/operationcut.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/operationcut.html
@@ -58,7 +58,7 @@
 	<h2 id="file">ファイル操作周り</h2>
 	<dl class="textlist">
 		<dt>ファイル名の変更</dt>
-		<dd>ファイルを選択して <em class="keyword">alt + shift + R</em> <span class="frm">(alt + command + R in Mac)</span></dd>
+		<dd>ファイルを選択して <em class="keyword">alt + command + R</em> <span class="frm">(Windowsならalt + shift + R)</span></dd>
 		<dd>
 			選択したファイルの名前を変更します。ファイルに限らずディレクトリ(Eclipseプロジェクト名も含む)なども変更できます。
 			
