--- a/web/ja/manual/topic/friends/eclipse/shortcut/searchcut.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/searchcut.html
@@ -36,7 +36,7 @@
 	<h2 id="program">プログラム周り</h2>
 	<dl>
 		<dt>クラスの検索</dt>
-		<dd><em class="keyword">ctrl + shift + T</em> <span class="frm">(ctrl -&gt; command in Mac)</span></dd>
+		<dd><em class="keyword">shirt + command(ctrl) + T</em></dd>
 		<dd>
 			キャメルケースコード補完と同じ要領で Eclipse
 			上で参照できるクラスを探し、そのファイルを開くことができる。
@@ -46,12 +46,12 @@
 			JARファイルの中のクラスは、(jadがあれば)逆コンパイルしたソースが表示される。
 		</dd>
 		<dt>呼び出し元の検索</dt>
-		<dd><em class="keyword">ctrl + shift + G</em> <span class="frm">(ctrl -&gt; command in Mac)</span></dd>
+		<dd><em class="keyword">shift + command(ctrl) + G</em></dd>
 		<dd>
 			選択したクラスやメソッドの呼び出し元を探すことができる。
 		</dd>
 		<dt>階層構造の検索</dt>
-		<dd><em class="keyword">ctrl + T</em> <span class="frm">(ctrl -&gt; command in Mac)</span></dd>
+		<dd><em class="keyword">command(ctrl) + T</em></dd>
 		<dd>
 			選択したクラスやメソッドの階層を探すことができる。
 			主に、選択したクラスのサブクラスを探すのに便利。
@@ -61,16 +61,12 @@
 	<h2 id="resource">リソース周り</h2>
 	<dl>
 		<dt>リソース(ファイル)の検索</dt>
-		<dd><em class="keyword">ctrl + shift + R</em></dd>
+		<dd><em class="keyword">shift + command(ctrl) + R</em></dd>
 		<dd>
-			キャメルケースコード補完と同じ要領で Eclipse
-			上に存在しているファイルを探し、そのファイルを開くことができる。
-			<span class="frm">(Mac では ctrl は command)</span>
+			キャメルケースコード補完と同じ要領で Eclipse上に存在しているファイルを探し、そのファイルを開くことができる。
 		</dd>
 		<dd>
-			クラスファイルも検索できるので、Eclipse上で 
-			java として管理しているクラスであれば、クラスの検索(ctrl + shift +
-			T)の代わりにもなる。(検索ノイズが減る)
+			クラスファイルも検索できるので、Eclipse上で java として管理しているクラスであれば、クラスの検索の代わりにもなる。(検索ノイズが減る)
 		</dd>
 	</dl>
 <!-- __content-end__ --></div></div>
