--- a/web/ja/manual/topic/friends/eclipse/shortcut/uttestcut.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/uttestcut.html
@@ -38,7 +38,7 @@
 	</p>
 	<dl class="textlist">
 		<dt>現在のテストを実行</dt>
-		<dd><em class="keyword">ctrl + 0</em> <span class="frm">(ぜろ)</span> <span class="frm">(ctrl -&gt; command in Mac)</span></dd>
+		<dd><em class="keyword">control + 0</em> <span class="frm">(ぜろ)</span></dd>
 		<dd>
 			現在カーソルが存在するテストメソッドだけを実行する。
 		</dd>
@@ -50,21 +50,18 @@
 		<dd>
 			ただ、Eclipseの別の機能に "F11"
 			が奪われてる可能性があるので、押しても効かない場合は、ワークスペースの設定(Preferences)の Keys
-			にて、"Rerun" のショートカットキーとして <em class="keyword">ctrl + R</em> などのかぶってないキーを割り当てると良い。
+			にて、"Rerun" のショートカットキーとして <em class="keyword">control + 4</em> などのかぶってないキーを割り当てると良い。
 		</dd>
 		<dt>対応するテストクラスを作成</dt>
-		<dd><em class="keyword">ctrl + 9</em> <span class="frm">(ctrl -&gt; command in Mac)</span></dd>
+		<dd><em class="keyword">control + 9</em></dd>
 		<dd>
 			現在カーソルが存在するクラスに対応するテストクラスを作成する。
-			ウィザード画面が起動し、どのソースフォルダーに配置するか(通常は
-			src/test/java)、どのクラスを継承するかなどを指定して Finish するとクラスが作成される。
+			ウィザード画面が起動し、どのソースフォルダーに配置するか(通常はsrc/test/java)、どのクラスを継承するかなどを指定して Finish するとクラスが作成される。
 		</dd>
 		<dt>対応するテストクラスへ移動</dt>
 		<dd>
-			現在カーソルが存在するクラスに対応するテストクラスに移動する。
-			これは、対応するテストクラスを作成と同じショートカットキーとなる。
-			対応するテストクラスがなければ作成し、あればそちらに移動する。
-			元のクラスに戻る時も同じショートカットキーで移動できる。
+			現在カーソルが存在するクラスに対応するテストクラスに移動する。これは、対応するテストクラスを作成と同じショートカットキーとなる。
+			対応するテストクラスがなければ作成し、あればそちらに移動する。元のクラスに戻る時も同じショートカットキーで移動できる。
 		</dd>
 	</dl>
 <!-- __content-end__ --></div></div>
