add /api handling on SwaggerUI

--- a/web/ja/lastaflute/howto/action/lajsonapi.html
+++ b/web/ja/lastaflute/howto/action/lajsonapi.html
@@ -371,6 +371,9 @@
 	</p>
 	<div class="relatedpage"><a href="https://github.com/dbflute/dbflute-intro">DBFlute Intro | Github</a></div>
 	<div class="relatedpage"><a href="http://dbflute.seasar.org/ja/manual/function/helper/intro/index.html">DBFlute Intro | DBFlute</a></div>
+	<p>
+		例えば、Swaggerを使っている場合に、SwaggerUI上でのURLに /api を付けるなど、DBFlute Introの実装を参考にしてみてください。
+	</p>
 
 	<h2 id="jsapiseparated">JS/API別サーバーパターン <span class="frm">(CORS)</span></h2>
 	<p>
