small fix: about git clone

--- a/web/ja/manual/topic/friends/eclipse/operation/git/egitroutine.html
+++ b/web/ja/manual/topic/friends/eclipse/operation/git/egitroutine.html
@@ -26,10 +26,9 @@
 <div id="content"><!-- __content-start__ -->
 	<h1>Eclipseで日常Git操作</h1>
 	<p>
-		すでに git clone されて、Eclipseに import されていることが前提です。
+		すでに git clone されて、Eclipseに import されていることが前提です。git cloneに関しては別ページにまとまっています。
 	</p>
 	<div class="relatedpage"><a href="./egitclone.html">Eclipseでgit clone</a></div>
-	<div class="relatedpage"><a href="../../index.html">Friends - Eclipse</a></div>
 	${indexlist}
 
 	<h2 id="egit">組み込みのEGitプラグイン</h2>
