about jflute shortcut

--- a/web/ja/manual/topic/friends/eclipse/environment/recomwork.html
+++ b/web/ja/manual/topic/friends/eclipse/environment/recomwork.html
@@ -317,7 +317,7 @@ sea.hangar(<span class="subpoint">stageNumber</span>, <span class="subpoint">are
 		<p>
 			本ページに書いてあることだけじゃなく、Keys設定とかもっともっとたくさんあるんです。
 		</p>
-		<div class="relatedpage"><a href="https://jflute.hatenadiary.jp/entry/20151205/eclipse">jfluteの日記 - Eclipseに寄付しました (Donate to Eclipse)</a></div>
+		<div class="relatedpage"><a href="../shortcut/keys.html#jflutekeys">jfluteなEclipseショートカットキー</a></div>
 		<p>
 			一応、Preferences の Export の機能があります。Packaeg Explorer上の適当ところで右クリック Export...
 			で選択できます。ただ、出力範囲が決まっているようで(?)、本当に隅々まで引き継げるかどうかはわかりません。
