--- a/web/ja/manual/topic/friends/eclipse/index.html
+++ b/web/ja/manual/topic/friends/eclipse/index.html
@@ -41,6 +41,11 @@
 		Eclipseには、たくさんのショートカットが用意されています。
 	</p>
 	<div class="detailpage"><a href="./shortcut/index.html">Eclipseショートカット</a></div>
+	<h3 id="keys">ショートカットキーの設定 Keys</h3>
+	<p>
+		Eclipseには、ショートカットキーをカスタマイズする機能が備わっています。
+	</p>
+	<div class="detailpage"><a href="./shortcut/keys.html">Eclipseショートカットキーの設定 Keys</a></div>
 
 	<h2 id="coding">Eclipseのコーディング</h2>
 	<h3 id="codeformatter">コードフォーマッター</h3>
@@ -58,11 +63,6 @@
 		Eclipseには、あまり使わないクラスを補完候補から除外する機能が備わっています。
 	</p>
 	<div class="detailpage"><a href="./coding/typefilters.html">Eclipseのノイズ減らし Type Filters</a></div>
-	<h3 id="contentassist">補完微調整 Content Assist</h3>
-	<p>
-		Eclipseには、コード補完の細かい挙動を調整する機能が備わっています。
-	</p>
-	<div class="detailpage"><a href="./coding/contentassist.html">Eclipseの補完微調整 Content Assist</a></div>
 
 	<h2 id="operation">Eclipseの操作</h2>
 	<h3 id="closetfile">隠しファイルの設定</h3>
