--- a/web/ja/manual/topic/friends/eclipse/operation/git/egitroutine.html
+++ b/web/ja/manual/topic/friends/eclipse/operation/git/egitroutine.html
@@ -168,7 +168,7 @@
 			ただ、デフォルトではショートカットがほとんど割り当てられていません。
 			なので興味のある猛者は、ワークスペース設定の <em class="mark">Preferences</em> の <em class="mark">Keys</em> 設定画面にて割り当ててみましょう。Mac想定となります。
 		</p>
-		<div class="relatedpage"><a href="../../environment/workproj.html">Eclipseのワークスペースとプロジェクト</a></div>
+		<div class="relatedpage"><a href="../../shortcut/keys.html">Eclipse, ショートカットキー設定(Keys)</a></div>
 		<dl class="shortvaluemainlist">
 			<dt><em class="mark">Fetch from Upstream</em></dt><dd>shift + alt + U <span class="frm">(Update: Fetch)</span></dd>
 			<dt><em class="mark">Pull</em> ☆</dt><dd>shift + alt + P <span class="frm">(Pull)</span></dd>
@@ -181,6 +181,9 @@
 		</dl>
 		<p>
 			<span class="frm">※ローカル修正を破棄する Replace with Head Rev. は気軽にできると危ないのでショートカット化していません。</span>
+		</p>
+		<p class="imgbox">
+			<a href="../../../../../../data/model/friends/eclipse/shortcut/friends-Eclipse-Keys-settings-basic.png" title="Eclipse Keys settings basic"><img src="../../../../../../data/model/friends/eclipse/shortcut/friends-Eclipse-Keys-settings-basic.png" alt="Eclipse Keys settings basic" width="520" height="380" /></a>
 		</p>
 		<p>
 			日常的に使う☆マークが付いているものだけでも良いでしょう。
