just fix: adjust links

--- a/web/ja/manual/topic/friends/eclipse/shortcut/index.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/index.html
@@ -34,6 +34,7 @@ w<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 		<li><a href="./operationcut.html">Eclipse, 操作系ショートカット</a></li>
 		<li><a href="./searchcut.html">Eclipse, 検索ショートカット</a></li>
 		<li><a href="./uttestcut.html">Eclipse, 単体テストショートカット</a></li>
+		<li><a href="./keys.html">Eclipse, ショートカットキー設定(Keys)</a></li>
 	</ul>
 <!-- __content-end__ --></div></div>
 
