--- a/web/ja/manual/topic/friends/eclipse/shortcut/keys.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/keys.html
@@ -25,7 +25,8 @@
 
 <div id="content"><!-- __content-start__ -->
 	<h1>Eclipse, ショートカットキー設定(Keys)</h1>
-	<div class="relatedpage"><a href="./index.html">Friends - Eclipse</a></div>
+	<div class="relatedpage"><a href="./index.html">Eclipseショートカット</a></div>
+	<div class="relatedpage"><a href="../index.html">Friends - Eclipse</a></div>
 	${indexlist}
 
 	<h2 id="keys">Keysとは？</h2>
