about pull before push

--- a/web/ja/manual/topic/friends/eclipse/operation/git/egitroutine.html
+++ b/web/ja/manual/topic/friends/eclipse/operation/git/egitroutine.html
@@ -127,6 +127,10 @@
 	<p class="imgbox">
 		<a href="../../../../../../data/model/friends/eclipse/operation/git/friends-Eclipse-GitContextMenu-push.png" title="Eclipse GitContextMenu push"><img src="../../../../../../data/model/friends/eclipse/operation/git/friends-Eclipse-GitContextMenu-push.png" alt="Eclipse GitContextMenu push" width="550" height="420" /></a>
 	</p>
+	<p>
+		サーバーリポジトリ側で他の人の修正が入っている場合は、その修正をローカルに Pull してからでないと Push できません。
+		Push でエラーになったら、とりあえず Pull してからもう一度 Push してみましょう。
+	</p>
 
 	<h2 id="githistory">Gitの履歴(History)を見る</h2>
 	<p>
