just fix: command + 8

--- a/web/ja/manual/topic/friends/eclipse/shortcut/keys.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/keys.html
@@ -61,7 +61,7 @@
 			<dt><em class="mark">Perspectiveを行き来</em></dt><dd>shift + command + @ <span class="frm">:: Next Perspective</span></dd>
 			<dt><em class="mark">Cleanコンパイル</em></dt><dd>alt + B <span class="frm">:: Clean</span></dd>
 			<dt><em class="mark">アプリの実行</em></dt><dd>control + R <span class="frm">:: Run</span></dd>
-			<dt><em class="mark">mainメソッドの実行</em></dt><dd>control + 8 <span class="frm">:: Run Java Application</span></dd>
+			<dt><em class="mark">mainメソッドの実行</em></dt><dd>command + 8 <span class="frm">:: Run Java Application</span></dd>
 			<dt><em class="mark">直近テストの再実行</em></dt><dd>control + 4 <span class="frm">:: Rerun JUnit (Quick JUnit)</span></dd>
 		</dl>
 		<p>
