make RemoteApiGen document

--- a/web/ja/lastaflute/howto/architecture/remoteapicall.html
+++ b/web/ja/lastaflute/howto/architecture/remoteapicall.html
@@ -26,10 +26,12 @@
 <div id="content"><!-- __content-start__ -->
 	<h1>定まったリモートAPI呼び出し (RemoteApi Call)</h1>
 	<p>
-		LastaFluteの特徴の一つです。
+		RemoteApiライブラリを提供しています。(Lasta RemoteApi)
 	</p>
-	<div class="relatedpage"><a href="../../index.html">LastaFluteトップページ</a></div>
-	<div class="relatedpage"><a href="../../tutorial/laimpl.html">LastaFluteの実装チュートリアル</a></div>
+	<p>
+		自動生成ツールもあります。
+	</p>
+	<div class="relatedpage"><a href="./remoteapigen.html">リモートAPIの自動生成 (RemoteApiGen)</a></div>
 	${indexlist}
 
 	<h2 id="overview">概要</h2>
@@ -772,16 +774,11 @@ org.docksidestage
 	<p>
 		自動生成できます。
 	</p>
+	<div class="detailpage"><a href="./remoteapigen.html">リモートAPIの自動生成 (RemoteApiGen)</a></div>
 	<h3 id="genarchitecture">RemoteApiGenのアーキテクチャ</h3>
 	<p class="imgbox">
 		<a href="../../../../data/model/lastaflute/remoteapi/lastaflute-remoteapigen-architecture-map.png" title="LastaFlute RemoteApiGen Architecture"><img src="../../../../data/model/lastaflute/remoteapi/lastaflute-remoteapigen-architecture-map.png" alt="LastaFlute RemoteApiGen Architecture" width="550" height="380" /></a>
 	</p>
-	<h3 id="gensetup">RemoteApiGenのセットアップ</h3>
-	<p>
-		RemoteApiGenの設定ファイルやExampleは、もろもろ dbflute-example-with-remoteapi-gen リポジトリに入っています。
-		こちらを参考に環境構築をしていきましょう。
-	</p>
-	<div class="detailpage"><a href="https://github.com/dbflute-example/dbflute-example-with-remoteapi-gen/">dbflute-example-with-remoteapi-gen | Github</a></div>
 
 	<h2 id="exampleproject">Exampleプロジェクト</h2>
 	<p>
@@ -802,10 +799,6 @@ org.docksidestage
 		Lasta RemoteApiは、"U-NEXTさん" より、コントリビュート頂きました。
 	</p>
 	<div class="detailpage"><a href="http://video.unext.jp/">U-NEXT＜ユーネクスト＞</a></div>
-	<p>
-		RemoteApiGenは、"LUXAさん" より、コントリビュート頂きました。
-	</p>
-	<div class="detailpage"><a href="https://luxa.jp/">LUXA (ルクサ)</a></div>
 	<p>
 		ありがとうございます！
 	</p>
