--- a/web/ja/lastaflute/howto/architecture/remoteapicall.html
+++ b/web/ja/lastaflute/howto/architecture/remoteapicall.html
@@ -26,10 +26,7 @@
 <div id="content"><!-- __content-start__ -->
 	<h1>定まったリモートAPI呼び出し (RemoteApi Call)</h1>
 	<p>
-		RemoteApiライブラリを提供しています。(Lasta RemoteApi)
-	</p>
-	<p>
-		自動生成ツールもあります。
+		RemoteApiライブラリを提供しています。プラグインとして自動生成ツールもあります。
 	</p>
 	<div class="relatedpage"><a href="./remoteapigen.html">リモートAPIの自動生成 (RemoteApiGen)</a></div>
 	${indexlist}
