--- a/web/ja/lastaflute/howto/architecture/remoteapigen.html
+++ b/web/ja/lastaflute/howto/architecture/remoteapigen.html
@@ -54,11 +54,28 @@
 		<dt>本家リポジトリ</dt><dd><a href="https://github.com/dbflute-example/dbflute-example-with-remoteapi-gen">dbflute-example-with-remoteapi-gen</a></dd>
 	</dl>
 	<p>
-		最新版はこのリポジトリの <em class="keyword">DBFluteクライアントのfreegenディレクトリのremoteapiディレクトリ</em>
-		にあります。アップグレードする際は、ここからコピーして現場のプロジェクトのものと入れ替えをしましょう。
+		最新版はこのリポジトリの <em class="keyword">DBFluteクライアントの freegenディレクトリの remoteapiディレクトリ</em>
+		にあります。
 	</p>
 	<p>
-		そのままExampleにもなっているので、設定など参考にしましょう。
+		そのままExampleプロジェクトになっているので、設定ファイルなど参考にしましょう。
+	</p>
+	<h3 id="setup">RemoteApiGenのセットアップ</h3>
+	<ol>
+		<li>本家リポジトリから <em class="keyword">[DBFluteクライアント]/freegen/remoteapiディレクトリ</em> をコピー</li>
+		<li>それをアプリの同じディレクトリに配置 <span class="frm">(すでにある場合はディレクトリごと入れ替え)</span></li>
+		<li>freeGenMap.dfprop に RemoteApiGen の FreeGenリクエストを定義</li>
+		<li><em class="keyword">src/main/resources/remoteapi/schema</em> にrule.jsを作成 <span class="frm">(Exampleを参考に)</span></li>
+		<li>同じくschemaディレクトリに、リモートサーバーのswagger.jsonを配置</li>
+		<li>manageタスクで freegen (12) を実行 <span class="frm">成功すると remoteパッケージにクラスが自動生成される</span></li>
+		<li>自動生成された Abstract...Bhv.java にて yourDefaultRule() を適切に実装</li>
+	</ol>
+	<h3 id="upgrade">RemoteApiGenのアップグレード</h3>
+	<p>
+		本家リポジトリの <em class="keyword">[DBFluteクライアント]/freegen/remoteapiディレクトリ</em> をコピーして、アプリの同じディレクトリと入れ替えます。
+	</p>
+	<p>
+		アプリのfreegen/remoteapiディレクトリ配下は手動で修正を入れていないことが前提です。
 	</p>
 
 	<h2 id="architecture">RemoteApiGenのアーキテクチャ</h2>
