--- a/web/index.ja.html
+++ b/web/index.ja.html
@@ -29,6 +29,7 @@
 		<div id="leftpart">
 			<h2>News</h2>
 			<ul>
+				<li><span class="date">2021/08/15</span><a href="https://jflute.hatenadiary.jp/entry/20210815/release125">DBFlute-1.2.5 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2021/01/01</span><a href="https://jflute.hatenadiary.jp/entry/20210101/release124">DBFlute-1.2.4 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2020/01/01</span><a href="https://jflute.hatenadiary.jp/entry/20200101/release122">DBFlute-1.2.2 (Java8対応)</a> をリリースしました。</li>
 				<li><span class="date">2019/01/01</span><a href="https://jflute.hatenadiary.jp/entry/20190101/release119">DBFlute-1.1.9 (Java8対応)</a> をリリースしました。</li>
@@ -42,8 +43,8 @@
 				<li><span class="date">2009/12/14</span><a href="http://dbflute.net.sandbox.seasar.org/">DBFlute.NETの仮のトップページ</a>を公開しました。</li>
 				<li>
 					<div class="inunews">
-					[jfluteのつぶやき] *2021/01/01<br />
-					DBFlute-1.2.4 をリリースしました: <a href="https://jflute.hatenadiary.jp/entry/20210101/release124">DBFlute-1.2.4 Released</a>
+					[jfluteのつぶやき] *2021/08/15<br />
+					DBFlute-1.2.5 をリリースしました: <a href="https://jflute.hatenadiary.jp/entry/20210815/release125">DBFlute-1.2.5 Released</a>
 					</div>
 				</li>
 			</ul>
