--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,32 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.2.1</h2>
+        <p class="releas5date">2021/08/17</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>@RestfulAction annotation for RESTful API</li>
+            <li>support businessHttpStatusMapping of typical ApiFailureHook</li>
+            <li>make SpecifiedHttpStatus on @Execute annotation</li>
+            <li>RegularExpression and JDK Version Story</li>
+            <li>remove deprecated from SlaveDBAccessorNothing</li>
+            <li>add runtimeAttributeMap to AccessContextResource</li>
+            <li>make createUnsupportedCipher() for case of unused</li>
+            <li>rootAction should be "/" in also toActionUrl()</li>
+            <li>[Lasta Di] illegal-access cannot be allowed in Java17, so remove it</li>
+            <li>[Lasta Di] renewal LdiSrl from DBFlute (fixing e.g. decamerize() bug)</li>
+            <li>[Lasta Di] fix wrong check of getGenericParameterType() for "second" method</li>
+            <li>[Lasta Job] for AccessContextResource runtimeAttributeMap</li>
+            <li>[Lasta Meta] making SwaggerDiff</li>
+            <li>[Lasta Meta] support CDef List in swagger.json</li>
+            <li>[Lasta Meta] support independent Part in swagger.json</li>
+            <li>[Lasta Meta] super refactoring</li>
+            <li>[Lasta Taglib] use LastaFlute-1.2.1</li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.2.0</h2>
         <p class="releas5date">2020/12/14</p>
         <div class="new">
