--- a/web/ja/lastaflute/howto/upgrade/migration/index.html
+++ b/web/ja/lastaflute/howto/upgrade/migration/index.html
@@ -37,6 +37,15 @@
 	</p>
 	<div class="detailpage"><a href="../lachangelog.html">LastaFlute の ChangeLog</a></div>
 
+	<h2 id="lastameta">lasta-docからlasta-metaへの移行</h2>
+	<p>
+		LastaDocやswagger.jsonを生成するライブラリとしてlasta-docを提供していましたが、lasta-metaという名前に変更されました。(2021年)
+	</p>
+	<p>
+		今後は、lasta-metaとしてリリースしていきますので、移行をお願いします。
+	</p>
+	<div class="detailpage"><a href="./ladoctolameta.html">lasta-docからlasta-metaへの移行</a></div>
+
 	<h2 id="attention">移行ポイント</h2>
 	<p>
 		アップグレードする際は必ずご覧下さい。
