--- a/web/ja/lastaflute/howto/architecture/jobscheduling.html
+++ b/web/ja/lastaflute/howto/architecture/jobscheduling.html
@@ -56,7 +56,7 @@
 		pom.xml に lasta-job を定義します。
 	</p>
 <pre><span class="codetitle">e.g. Lasta Job dependency @pom.xml</span><code>
-&lt;lasta.job.version&gt;<span class="literal">0.5.3</span>&lt;/lasta.job.version&gt;
+&lt;lasta.job.version&gt;<span class="literal">LastaJobの最新バージョンをここに</span>&lt;/lasta.job.version&gt;
 
 <span class="abbreviation">...</span>
 
